# worldcereal-cop4geoglam

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  lint.yaml
notebooks/: data_preparation.ipynb
scripts/: convert_gdf_to_production_grid.py  finetune_presto.py  generate_country_grid.py  run_collect_inputs.py  run_inference_locally.py  run_production.py  train_catboost.py
scripts/extractions/: extract_points.sh
src/worldcereal_cop4geoglam/: __init__.py  _version.py  constants.py  dataset.py  datasets.py  finetuning_utils.py  timeseries.py
src/worldcereal_cop4geoglam/RDM_preprocessing/: photo_extravaganza.py  point_to_PSU.py  preprocessing_Moldova.py  preprocessing_Mozambique.py
src/worldcereal_cop4geoglam/data/: class_mapping_Moldova_prelim.json  class_mapping_Mozambique_prelim.json  class_mappings.json  mapping_workflow.py  mapping_workflow_Moldova.py  mapping_workflow_Mozambique.py
src/worldcereal_cop4geoglam/data/croptype_mappings/: class_mappings_Mozambique.json  class_mappings_kenya.json
src/worldcereal_cop4geoglam/data/kenya/: class_mappings_kenya.json
src/worldcereal_cop4geoglam/data/moldova/: class_mappings_moldova.json  colormap_moldova.json
src/worldcereal_cop4geoglam/data/validation_ids/: val_ids_moldova.csv
src/worldcereal_cop4geoglam/mixed_cropping/: duplicate_extractions.py  duplicate_mapping_Mozambique.json  duplicate_mapping_moldova.json  duplicate_mapping_workflow_Mozambique.py
tests/worldcerealc4gtests/: test_dataset.py  test_datasets.py  test_dummy.py  test_finetuning_utils.py
